2008-07-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-internal.hxx:
  - Sun Studio fix: use ptrdiff_t, not iterator_traits, thanks Jorgen Austvik
  - distance() workaround for Sun Studio was completely broken
2008-07-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx,
 test/unit/test_escape.cxx:
  - New quote() function templates, using string_traits
  - New test
 include/pqxx/except.hxx, include/pqxx/util.hxx, src/util.cxx:
  - New exception type conversion_error
  - Added name() and has_null() to string_traits<>
  - Better error messages for null conversions
 test/unit/test_sql_cursor.cxx:
  - Simpler way of running multiple tests from one main()
2008-06-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, include/pqxx/result.hxx, src/connection_base.cxx,
 src/cursor.cxx, src/except.cxx, src/largeobject.cxx, src/result.cxx,
 src/robusttransaction.cxx, src/tablereader.cxx, src/transaction_base.cxx,
 src/util.cxx:
  - Throw pqxx_exception-derived exceptions instead of std ones, thanks yrs90.
2008-06-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/tablewriter.hxx:
  - Peephole optimization, thanks Daniel Frey.
2008-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_simultaneous_transactions.cxx:
  - Added test against being allowed to have two nontransactions open.
2008-06-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-internal.hxx, src/pipeline.cxx, test/test085.cxx:
  - Re-did workaround for missing std::distance() in safer way.
2008-06-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Don't force LC_ALL=C; breaks on Solaris, thanks Bjorn Munch & Geir Green.
2008-06-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Make streaming operator act on basic_ostream, thanks Richard B. Kreckel
  - Should resolve ambiguity error, sorry Carlos Moreno!
2008-06-15  Jeroen T. Vermeulen <jtv@xs4all.nl>