@@ -1,0 +1,18 @@
+#define HAVE_SYS_TYPES_H 1
+#define HAVE_UNISTD_H 1
+#define PQXX_HAVE_COUNT_IF 1
+#define PQXX_HAVE_C_NAN 1
+#define PQXX_HAVE_DISTANCE 1
+#define PQXX_HAVE_GCC_VISIBILITY 1
+#define PQXX_HAVE_IMBUE 1
+#define PQXX_HAVE_LOCALE 1
+#define PQXX_HAVE_NAN 1
+#define PQXX_HAVE_POLL 1
+#define PQXX_HAVE_QUIET_NAN 1
+#define PQXX_HAVE_SLEEP 1
+#define PQXX_HAVE_STRERROR_R 1
+#define PQXX_HAVE_STRING_CLEAR 1
+/* #undef PQXX_HAVE_STRLCPY */
+#define PQXX_HAVE_STRNLEN 1
+#define PQXX_HAVE_SYS_SELECT_H 1
+#define PQXX_SELECT_ACCEPTS_NULL 1
