@@ -65,7 +65,8 @@ LIBTOOL=link.exe -lib
 # The options common to all the different builds.
 CXX_FLAGS_BASE=/nologo /W3 /EHsc /FD /GR /c \
     /I "include" /I $(PGSQLSRC)/include /I $(PGSQLSRC)/interfaces/libpq \
-    /D PGSTD=$(STD) /D "WIN32" /D "_MBCS" /D "_WINDOWS" /D "PQXX_INTERNAL"
+    /D PGSTD=$(STD) /D "WIN32" /D "_MBCS" /D "_WINDOWS" /D "PQXX_INTERNAL" \
+    /D "PQXX_AUTOLINK"
 
 CXX_FLAGS_DLLRELEASE=$(CXX_FLAGS_BASE) /MD  /D "NDEBUG" /D "PQXX_SHARED"
 CXX_FLAGS_DLLDEBUG=$(CXX_FLAGS_BASE) /MDd /Gm /ZI /Od /D "_DEBUG" /D "PQXX_SHARED" /RTC1
